[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keito"
version = "0.3.0"
description = "Official Python SDK for the Keito API — track billable time, expenses, and invoices for humans and AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9,<4.0"
authors = [
    {name = "Keito", email = "support@keito.ai"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0",
    "pydantic-core",
    "typing_extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-httpx",
    "pytest-cov",
    "mypy",
    "ruff",
]

[project.urls]
Homepage = "https://keito.ai"
Documentation = "https://keito.ai/docs"
Repository = "https://github.com/osodevops/keito-python"
Changelog = "https://github.com/osodevops/keito-python/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP007", "UP045"]
